# nup

./: .gitignore  CMakeLists.txt  Makefile  README.md  imgui.ini  log
build-android/: CMakeCache.txt
build-android/boost-prefix/src/boost-stamp/: boost-gitinfo.txt
build-android/boost-prefix/tmp/: boost-gitclone.cmake  boost-gitupdate.cmake
build-android/glfw3-prefix/tmp/: glfw3-cfgcmd.txt  glfw3-gitclone.cmake  glfw3-gitupdate.cmake
build-android/nup/include/nup/: api.h
cmake/: ExternalDeps.cmake  FindOpenSSL.cmake  warning_as_error.cmake
nup/: CMakeLists.txt
nup/src/: main.cpp  nup.cpp.bak  nup.h  nup_alloc.h  nup_android_window.h  nup_any.cpp  nup_any.h  nup_app.h  nup_color.cpp  nup_color.h  nup_component.cpp  nup_component.h  nup_config.h.in  nup_core.cpp  nup_core.h  nup_data.cpp  nup_data.h  nup_demo.cpp  nup_demo.h  nup_file.cpp  nup_file.h  nup_frame_timer.cpp  nup_frame_timer.h  nup_gl_hw_buffer.cpp  nup_gl_hw_buffer.h  nup_gl_renderer.cpp  nup_gl_renderer.h  nup_gl_shader.cpp  nup_gl_shader.h  nup_glfw_window.cpp  nup_glfw_window.h  nup_hw_buffer.h  nup_mesh.cpp  nup_mesh.h  nup_movable_object.cpp  nup_movable_object.h  nup_opengl.cpp  nup_opengl.h  nup_particle.cpp  nup_particle.h  (+24 more)
nup/src/android/: gradle.properties  settings.gradle
nup/src/android/app/: build.gradle
nup/src/android/app/src/androidTest/java/nup/z/: ExampleInstrumentedTest.java
nup/src/android/app/src/main/: AndroidManifest.xml
nup/src/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
nup/src/android/app/src/main/java/nup/z/: GLRenderer.java  GLView.java  MainActivity.java  NupJni.java
nup/src/android/app/src/main/res/layout/: activity_main.xml
nup/src/android/app/src/main/res/values/: strings.xml  themes.xml
nup/src/android/app/src/main/res/values-night/: themes.xml
nup/src/android/app/src/test/java/nup/z/: ExampleUnitTest.java
nup/src/android/cpp/: nup_android_window.cpp  nup_z_NupJni.cpp  nup_z_NupJni.h
nup/src/android/gradle/wrapper/: gradle-wrapper.properties
nup/src/gles2_3.2/: gles2.h
nup/src/glfw/: glad_gl.h  nup_glfw_window.cpp
nup/src/linux/: imconfig.h  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h  main.cpp  nup_main.cpp
tools/: build_android.sh  build_boost.sh
